src/test/ui/issues/issue-3344.stderr
error[E0046]: not all trait items implemented, missing: `partial_cmp`
  --> $DIR/issue-3344.rs:13:1
   |
LL | impl PartialOrd for thing { //~ ERROR not all trait items implemented, missing: `partial_cmp`
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ missing `partial_cmp` in implementation
   |
   = note: `partial_cmp` from trait: `fn(&Self, &Rhs) -> std::option::Option<std::cmp::Ordering>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
